syntax = "proto3";

package protos.auth.response;

message SignIn {
  string auth_token = 1;
}
